--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,11 @@ rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
+  - 2.0.0
   - jruby-18mode
   - jruby-19mode
   - rbx-18mode
   - rbx-19mode
+matrix:
+  allow_failures:
+    - rvm: 2.0.0
